fixed options stretching to ovals

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -79,6 +79,8 @@ header {
   background: white;
   padding: 2em;
   border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }
 
 .rock {
